--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 VITE_APP_NAME=YourEdu
 VITE_PORT=5173
-VITE_APP_URL=http://localhost:8000
+VITE_APP_URL=http://bobdev.tech
 VITE_REVERB_APP_KEY=
 VITE_REVERB_HOST=
 VITE_REVERB_PORT=
