improved about design of about page

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 
 VITE_APP_NAME=YourEdu
 VITE_PORT=5173
-VITE_APP_URL=https:localhost:8000
-VITE_APP_URL_=https://bobdev.tech
+VITE_APP_URL_=https:localhost:8000
+VITE_APP_URL=https://bobdev.tech
 VITE_REVERB_APP_KEY=
 VITE_REVERB_HOST=
 VITE_REVERB_PORT=
